force-app/main/default/objects/Account/fields/Parental_Contact__c.field-meta.xml
<CustomField>
    <fullName>Parental_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parental Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Ohana</relationshipLabel>
    <relationshipName>Ohana</relationshipName>
    <type>Lookup</type>
</CustomField>