force-app/main/default/objects/Account/fields/Parental_email__c.field-meta.xml
<CustomField>
    <fullName>Parental_email__c</fullName>
    <formula>Parental_Contact__r.Email</formula>
    <label>Parental email</label>
    <type>Text</type>
</CustomField>