force-app/main/default/objects/Account/fields/Parental_Email_Updated__c.field-meta.xml
<CustomField>
    <fullName>Parental_Email_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to TRUE if the email address for the account's parental contact is updated
If the checkbox gets set to true, a BP "Propagate Changed Parental Email checkbox to related contacts" is fired which updates the Parental_Email_Updated__c field on related contact records</description>
    <inlineHelpText>Set TRUE if the email address for the account's parental contact updated
which fires, a BP "Propagate Changed Parental Email checkbox to related contacts" is fired which updates the Parental_Email_Updated__c field on related contact records</inlineHelpText>
    <label>Parental Email Updated</label>
    <type>Checkbox</type>
</CustomField>