force-app/main/default/objects/Account/fields/Parental_Phone__c.field-meta.xml
<CustomField>
    <fullName>Parental_Phone__c</fullName>
    <formula>Parental_Contact__r.MobilePhone</formula>
    <label>Parental Phone</label>
    <type>Text</type>
</CustomField>